--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   sqflite: ^2.0.0+4
   path: ^1.8.3
   image_picker: ^0.8.5+3  # Cập nhật phiên bản mới nhất
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
